# LogParser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark.py
docs/: getting-started.md
examples/: __init__.py  basic_usage.py  sample_logs.py
logparser/: __init__.py  aggregator.py  alerter.py  analyzer.py  config.py  formatters.py  parser.py  patterns.py
tests/: __init__.py  test_logparser.py
